refactor: Create new post view template

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -17,7 +17,10 @@
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto px-3 py-2">
           <li class="nav-item">
-            <a class="nav-link text-capitalize" href="/login">Home</a>
+            <a class="nav-link text-capitalize" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-capitalize" href="/dashboard">Dashboard</a>
           </li>
           {{#if loggedIn}}
             <li class="nav-item dropdown">
