refactor: Update comment styles

--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,4 +1,4 @@
-<div class="container bg-white px-4 py-3 shadow-sm mb-5">
+<div class="container bg-white pt-4 pb-1 shadow-sm mb-5">
   <div class="row py-2">
     <div class="col">
       <h2 class="h5 fw-bold text-capitalize">Why MVC is so important</h2>
@@ -50,7 +50,7 @@
       <hr class="mb-1 mt-1" />
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center align-content-center">
 
     <div class="col-5 text-center">
       <button class="btn btn-outline-dark border-0 align-middle w-100">
