feat: Implement user authentication

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,12 +14,13 @@
           </div>
         </div>
         <div class="row mt-4 px-5">
-          <form>
+          <form id="loginForm">
             <div class="form-floating mb-3">
               <input
                 type="email"
                 class="form-control border-top-0 border-start-0 border-end-0 border-bottom"
                 id="emailInput"
+                name="email"
                 placeholder="name@example.com"
               />
               <label for="emailInput">Email address</label>
@@ -29,6 +30,7 @@
                 type="password"
                 class="form-control border-top-0 border-start-0 border-end-0 border-bottom"
                 id="passwordInput"
+                name="password"
                 placeholder="Password"
               />
               <label for="passwordInput">Password</label>
@@ -56,3 +58,4 @@
   </div>
 
 </div>
+<script src="assets/js/login.js"></script>
