--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,11 +19,11 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    {{#if loggedIn}}
-    <script type="text/javascript" src="/js/logout.js"></script>
-    {{/if}}
+
 
 
 </body>
-
+{{#if loggedIn}}
+<script src="assets/js/logout.js"></script>
+{{/if}}
 </html>
