feat: Implement conditional view rendering

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,8 +8,8 @@
 </div>
 
 <div class="row mt-4">
-{{> post}}
-{{> post}}
-{{> post}}
+  {{#each posts as |post|}}
+    {{> post userId=../userId post=postData }}
+  {{/each}}
 
 </div>
