--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,6 +5,6 @@
   </div>
   <div class="row mt-4">
   {{#each posts as |post|}}
-    {{> post userId=../userId post=postData }}
+    {{> post userId=../userId post=post loggedIn=../loggedIn }}
   {{/each}}
   </div>
