--- a/views/partials/commentsContainer.handlebars
+++ b/views/partials/commentsContainer.handlebars
@@ -4,21 +4,22 @@
       <hr class="mt-1 mb-4" />
     </div>
   </div>
-  
-  <form class="row">
-    <div class="col">
-      <input
-        class="form-control rounded-pill"
-        type="text"
-        placeholder="Write a comment..."
-        aria-label="Comment Input"
-      />
-    </div>
+  {{#if loggedIn}}
+    <form class="row">
+      <div class="col">
+        <input
+          class="form-control rounded-pill"
+          type="text"
+          placeholder="Write a comment..."
+          aria-label="Comment Input"
+        />
+      </div>
 
-    <div class="col-auto">
-      <button type="submit" class="btn btn-dark mb-3">Post</button>
-    </div>
-  </form>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-dark mb-3">Post</button>
+      </div>
+    </form>
+  {{/if}}
 
   <div class="row mt-2">
     <div class="col px-4">
