feat: Include frontend scripts

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
 
 </body>
 {{#if loggedIn}}
+<script src="assets/js/post.js"></script>
+<script src="assets/js/comment.js"></script>
 <script src="assets/js/logout.js"></script>
 {{/if}}
 </html>
