--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -110,6 +110,6 @@
     </div>
   </div>
   
-  {{> commentsContainer comments=comments userId=userId loggedIn=loggedIn}}
+  {{> commentsContainer comments=comments userId=userId loggedIn=loggedIn postId=id}}
 
 </div>
